# UAV_objects_detection

./: CMakeLists.txt  README.md  package.xml  plugins.xml
config/: ground_truth_tf_publisher.yaml  objects.yml
include/: DetectionNode.h
launch/: detection.launch  mrs_byci_skala_detection.launch  rviz.launch
msg/: Metadata.msg  MetadataArray.msg
rviz/: rv.rviz
src/: DetectionNode.cpp  ground_truth_tf_publisher.cpp
tmux_scripts/: .tmuxinator.yml  session.yml
